sema/testdata/gcc-c99-extra/reject/compound-literal-cast-lvalue-1.c
int main() {
        int *p = &(int) (int) {0};
        return 0;
}
